[package]
name = "sainnhe-common"
version = "0.1.0"
authors = ["Sainnhe Park <i@sainnhe.dev>"]
edition = "2024"
description = "Common library for rust projects"
readme = "README.md"
repository = "https://github.com/sainnhe/rust-common"
license = "GPL-3.0-or-later"
keywords = ["common"]
categories = [
  "algorithms",
  "command-line-interface",
  "concurrency",
] # See https://crates.io/category_slugs
exclude = [
  "/.gitignore",
  "/githooks",
  "/deny.toml",
] # Use exclude or include to explicitly specify which files are included when packaging a project to be published. You may run cargo package --list to verify which files will be included in the package.

[dependencies]
sqlx = "0.8.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
